--- a/Pandas_Question_Solving Team score data.ipynb
+++ b/Pandas_Question_Solving Team score data.ipynb
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "aa1710a4-8036-43d7-ae05-a202192dcc0d",
    "metadata": {},
    "outputs": [
@@ -783,26 +783,126 @@
      "data": {
       "text/plain": [
        "Team\n",
-       "Kings     2\n",
-       "Riders    1\n",
-       "Royals    1\n",
+       "Kings    2\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Q6. jo kam se kam 2 alag-alag years me Rank 1 par rahi ho.\n",
-    "df[df['Rank']==1]['Team'].value_counts()"
+    "df[df['Rank']==1]['Team'].value_counts()[lambda x: x>=2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7d49d11e-e544-4ba2-ac8c-01a7c08989fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Points</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Team</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Devils</th>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kings</th>\n",
+       "      <td>2.250000</td>\n",
+       "      <td>774.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Riders</th>\n",
+       "      <td>1.666667</td>\n",
+       "      <td>786.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Royals</th>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>758.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Rank      Points\n",
+       "Team                        \n",
+       "Devils  2.500000  768.000000\n",
+       "Kings   2.250000  774.250000\n",
+       "Riders  1.666667  786.333333\n",
+       "Royals  2.333333  758.333333"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Q7 . Har team ka: average rank, average points nikalo aur analyze karo Kya better rank hamesha better points ka sign hai?\n",
+    "team_avg = df.groupby('Team')[['Rank', 'Points']].mean()\n",
+    "team_avg\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "654ea887-9708-49b5-b430-fbe12604b9cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.8283400687891124)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_avg['Rank'].corr(team_avg['Points'])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d49d11e-e544-4ba2-ac8c-01a7c08989fc",
+   "id": "e51653b3-6520-4e13-9d6c-124742a22c88",
    "metadata": {},
    "outputs": [],
    "source": []
