--- a/Pandas_Question_Solving Team score data.ipynb
+++ b/Pandas_Question_Solving Team score data.ipynb
@@ -929,10 +929,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "543e91b3-eeef-4a5c-89cd-f7ae4a7c4271",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ABHISHEK YADAV\\AppData\\Local\\Temp\\ipykernel_9132\\800150031.py:2: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df.groupby('Year').apply(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -941,17 +949,19 @@
        "2015   -0.489412\n",
        "2016   -1.000000\n",
        "2017   -1.000000\n",
-       "Name: Points, dtype: float64"
+       "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# q9 Har year me: Rank aur Points ke beech correlation nikaalo Kya lower rank (1) hamesha higher points deta hai?\n",
-    "df.groupby('Year')['Points'].corr(df['Rank'])"
+    "df.groupby('Year').apply(\n",
+    "    lambda x: x['Rank'].corr(x['Points'])\n",
+    ")\n"
    ]
   },
   {
@@ -960,7 +970,19 @@
    "id": "19bc6850-c9e3-48a7-a468-87e39be8e03b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78929bd6-bf83-42bc-98a0-d7c36633f359",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
