--- a/Pandas_Question_Solving Team score data.ipynb
+++ b/Pandas_Question_Solving Team score data.ipynb
@@ -966,12 +966,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "19bc6850-c9e3-48a7-a468-87e39be8e03b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     876\n",
+       "1     884\n",
+       "2     876\n",
+       "3     884\n",
+       "4     876\n",
+       "5     884\n",
+       "6     756\n",
+       "7     788\n",
+       "8     756\n",
+       "9     876\n",
+       "10    884\n",
+       "11    788\n",
+       "Name: Points, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " "
+    "# Q10. Aisi teams identify karo jo Rank 1 par aayi lekin us year highest points nahi the(Ye question kaafi interview-level hai ) answer \n",
+    "max_points = df.groupby('Year')['Points'].transform('max')\n",
+    "max_points"
    ]
   },
   {
