--- a/ day_6_Matplotlib/Matplotlib Question Solving.ipynb
+++ b/ day_6_Matplotlib/Matplotlib Question Solving.ipynb
@@ -591,11 +591,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "d9a72d81-f1e1-427c-bad7-139cac9dd7a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>789</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Devils</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Devils</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Kings</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Riders</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Royals</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>690</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Team  Rank  Year  Points\n",
+       "0   Riders     1  2014     876\n",
+       "1   Riders     2  2015     789\n",
+       "2   Devils     2  2014     863\n",
+       "3   Devils     3  2015     673\n",
+       "4    Kings     3  2014     741\n",
+       "5    Kings     4  2015     812\n",
+       "6    Kings     1  2016     756\n",
+       "7    Kings     1  2017     788\n",
+       "8   Riders     2  2016     694\n",
+       "9   Royals     4  2014     701\n",
+       "10  Royals     1  2015     884\n",
+       "11  Royals     2  2017     690"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
