--- a/MATPLOTLIB/QUESTIONS SOLVING MATPLOTLIB/Crime Data.ipynb
+++ b/MATPLOTLIB/QUESTIONS SOLVING MATPLOTLIB/Crime Data.ipynb
@@ -909,7 +909,10 @@
    "outputs": [],
    "source": [
     "# Q8 Month-wise crime trend plot karo. Kya seasonality exist karti hai?\n",
-    " df['Months']=df['Date of Occurrence'].dt.month_name()\n"
+    "df['Months']=df['Date of Occurrence'].dt.month_name()\n",
+    "a=df['Months'].value\n",
+    "\n",
+    "\n"
    ]
   },
   {
