--- a/MATPLOTLIB/QUESTIONS SOLVING MATPLOTLIB/Crime Data.ipynb
+++ b/MATPLOTLIB/QUESTIONS SOLVING MATPLOTLIB/Crime Data.ipynb
@@ -935,26 +935,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "ecba4a54-812a-4d46-a5c5-454f59c53c83",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'plot'",
+     "ename": "TypeError",
+     "evalue": "bar() missing 2 required positional arguments: 'x' and 'height'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Q9. City-wise violent crimes ka stacked bar chart banao. Har city me violent vs non-violent compare karo.\u001b[39;00m\n\u001b[32m      2\u001b[39m ct =  df.groupby(\u001b[33m'\u001b[39m\u001b[33mCity\u001b[39m\u001b[33m'\u001b[39m)[\u001b[33m'\u001b[39m\u001b[33mCrime Domain\u001b[39m\u001b[33m'\u001b[39m].value_counts\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mct\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m(\n\u001b[32m      4\u001b[39m     kind=\u001b[33m'\u001b[39m\u001b[33mbar\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      5\u001b[39m     stacked=\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[32m      6\u001b[39m     figsize=(\u001b[32m12\u001b[39m,\u001b[32m6\u001b[39m)\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m plt.xlabel(\u001b[33m'\u001b[39m\u001b[33mCity\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     10\u001b[39m plt.ylabel(\u001b[33m'\u001b[39m\u001b[33mNumber of Crimes\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'function' object has no attribute 'plot'"
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Q9. City-wise violent crimes ka stacked bar chart banao. Har city me violent vs non-violent compare karo.\u001b[39;00m\n\u001b[32m      2\u001b[39m ct =  df.groupby(\u001b[33m'\u001b[39m\u001b[33mCity\u001b[39m\u001b[33m'\u001b[39m)[\u001b[33m'\u001b[39m\u001b[33mCrime Domain\u001b[39m\u001b[33m'\u001b[39m].value_counts\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mplt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbar\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mkind\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbar\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstacked\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfigsize\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m12\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m plt.xlabel(\u001b[33m'\u001b[39m\u001b[33mCity\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     10\u001b[39m plt.ylabel(\u001b[33m'\u001b[39m\u001b[33mNumber of Crimes\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: bar() missing 2 required positional arguments: 'x' and 'height'"
      ]
     }
    ],
    "source": [
     "# Q9. City-wise violent crimes ka stacked bar chart banao. Har city me violent vs non-violent compare karo.\n",
     "ct =  df.groupby('City')['Crime Domain'].value_counts\n",
-    "ct.plot(\n",
+    "plt.plot(\n",
     "    kind='bar',\n",
     "    stacked=True,\n",
     "    figsize=(12,6)\n",
